fix(VInput): don't try to wrap affix content

--- a/packages/vuetify/src/components/VInput/VInput.sass
+++ b/packages/vuetify/src/components/VInput/VInput.sass
@@ -4,7 +4,7 @@
   display: grid
   flex: 1 1 auto
   grid-template-areas: "prepend control append" "a messages b"
-  grid-template-columns: min-content auto min-content
+  grid-template-columns: max-content auto max-content
   grid-template-rows: auto auto
 
   @at-root
